@@ -4,20 +4,23 @@ import com.sprint.mission.discodeit.dto.Channel.ChannelDto;
 import com.sprint.mission.discodeit.dto.Channel.PrivateChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.Channel.PublicChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.Channel.PublicChannelUpdateRequest;
-import com.sprint.mission.discodeit.entity.*;
+import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.ChannelType;
+import com.sprint.mission.discodeit.entity.ReadStatus;
+import com.sprint.mission.discodeit.entity.User;
+import com.sprint.mission.discodeit.mapper.ChannelMapper;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
+import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-
 import java.time.Instant;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -26,74 +29,59 @@ public class BasicChannelService implements ChannelService {
     private final ChannelRepository channelRepository;
     private final ReadStatusRepository readStatusRepository;
     private final MessageRepository messageRepository;
+    private final UserRepository userRepository;
+    private final ChannelMapper channelMapper;
 
     /**
      * 주어진 요청 DTO를 기반으로 Public 채널 생성 및 저장
      *
-     * @param createRequestDTO 생성 요청 DTO
+     * @param createRequest 생성 요청 DTO
      * @return 생성된 채널
      */
     @Override
-    public Channel create(PublicChannelCreateRequest createRequestDTO) {
-        String name = createRequestDTO.name();
-        String description = createRequestDTO.description();
+    @Transactional
+    public ChannelDto create(PublicChannelCreateRequest createRequest) {
 
-        Channel ch = Channel.builder()
+        Channel publicChannel = Channel.builder()
+                .name(createRequest.name())
+                .description(createRequest.description())
                 .type(ChannelType.PUBLIC)
-                .name(name)
-                .description(description)
                 .build();
 
-        channelRepository.save(ch);
-        return ch;
+        channelRepository.save(publicChannel);
+        return channelMapper.toDto(publicChannel);
     }
 
     /**
      * 주어진 요청 DTO를 기반으로 Private 채널 생성
      *
-     * @param createRequestDTO 생성 요청 DTO
+     * @param createRequest 생성 요청 DTO
      * @return 생성된 채널
      */
     @Override
-    public Channel create(PrivateChannelCreateRequest createRequestDTO) {
-        Channel ch = Channel.builder()
+    @Transactional
+    public ChannelDto create(PrivateChannelCreateRequest createRequest) {
+
+        Channel privateChannel = Channel.builder()
                 .type(ChannelType.PRIVATE)
                 .build();
 
-        createRequestDTO.participantIds().stream()
-                .map(userId -> ReadStatus.builder()
-                        .userId(userId)
-                        .channelId(ch.getId())
-                        .lastReadAt(ch.getCreatedAt())
+        List<User> users = userRepository.findAllByIdIn(createRequest.participantIds());
+
+        channelRepository.save(privateChannel);
+
+        // private 채널 입장 유저의 ReadStatus 생성
+        List<ReadStatus> readStatuses = users.stream()
+                .map(user -> ReadStatus.builder()
+                        .user(user)
+                        .channel(privateChannel)
+                        .lastReadAt(Instant.now())
                         .build())
-                .forEach(readStatusRepository::save);
+                .toList();
 
-        channelRepository.save(ch);
-        return ch;
-    }
+        readStatusRepository.saveAll(readStatuses);
 
-    /**
-     * 주어진 채널을 기반으로 ChannelResponseDTO 생성
-     *
-     * @param ch 채널엔티티
-     * @return ChannelResponseDTO
-     */
-    private ChannelDto buildChannelDTO(Channel ch) {
-        // 가장 최근 메시지
-        Message msg = messageRepository.findByChannelId(ch.getId()).stream()
-                .reduce((a, b) -> b)
-                .orElse(null);
-
-        // PRIVATE 채널인 경우 참여한 User의 id 정보 포함
-        if (ChannelType.PRIVATE.equals(ch.getType())) {
-            List<UUID> userIdList = readStatusRepository.findUserIdByChannelId(ch.getId());
-            return ChannelDto.from(ch,
-                    msg != null ? msg.getCreatedAt() : null,
-                    userIdList);
-        } else {
-            return ChannelDto.from(ch,
-                    msg != null ? msg.getCreatedAt() : null);
-        }
+        return channelMapper.toDto(privateChannel);
     }
 
     /**
@@ -103,23 +91,14 @@ public class BasicChannelService implements ChannelService {
      * @return 조회된 채널DTO 리스트
      */
     @Override
+    @Transactional(readOnly = true)
     public List<ChannelDto> findAllByUserId(UUID userId) {
-        List<Channel> channelList = channelRepository.findAll();
 
-        //유저가 속한 채널 ID
-        Set<UUID> userChannelIds = readStatusRepository.findByUserId(userId).stream()
-                .map(ReadStatus::getChannelId)
-                .collect(Collectors.toSet());
+        List<Channel> channels = channelRepository.findAllPublicOrUserChannels(userId);
 
-        return channelList.stream()
-                .filter(ch ->
-                        // PUBLIC 채널 + PRIVATE 채널인 경우 유저가 포함된 채널만 반환
-                        ch.getType().equals(ChannelType.PUBLIC)
-                                || userChannelIds.contains(ch.getId())
-                )
-                .map(this::buildChannelDTO)
-                .collect(Collectors.toList());
-
+        return channels.stream()
+                .map(channelMapper::toDto)
+                .toList();
     }
 
     /**
@@ -130,39 +109,38 @@ public class BasicChannelService implements ChannelService {
      * @throws NoSuchElementException 해당 ID의 채널이 존재하지 않는 경우
      */
     @Override
+    @Transactional(readOnly = true)
     public ChannelDto find(UUID channelId) {
         Channel ch = channelRepository.findById(channelId)
                 .orElseThrow(() -> new NoSuchElementException("해당 ID의 채널이 존재하지 않습니다."));
 
-        return buildChannelDTO(ch);
+        return channelMapper.toDto(ch);
     }
 
     /**
      * 주어진 채널ID에 해당하는 공개 채널을 수정 요청DTO의 값으로 수정
      *
-     * @param channelId        수정 대상 채널ID
-     * @param updateRequestDTO 수정 요청 DTO
+     * @param channelId     수정 대상 채널ID
+     * @param updateRequest 수정 요청 DTO
      * @return 수정된 채널
      * @throws NoSuchElementException   해당 ID의 채널이 존재하지 않는 경우
      * @throws IllegalArgumentException 해당 채널이 PRIVATE 채널인 경우
      */
     @Override
-    public Channel update(UUID channelId, PublicChannelUpdateRequest updateRequestDTO) {
+    @Transactional
+    public ChannelDto update(UUID channelId, PublicChannelUpdateRequest updateRequest) {
         // 채널 유효성 검사
-        Channel ch = channelRepository.findById(channelId)
+        Channel channel = channelRepository.findById(channelId)
                 .orElseThrow(() -> new NoSuchElementException("해당 채널이 존재하지 않습니다."));
 
-        if (ch.getType().equals(ChannelType.PRIVATE)) {
+        if (ChannelType.PRIVATE.equals(channel.getType())) {
             throw new IllegalArgumentException("PRIVATE 채널은 수정할 수 없습니다.");
         }
 
-        String newName = updateRequestDTO.newName();
-        String newDescription = updateRequestDTO.newDescription();
+        channel.update(updateRequest.newName(), updateRequest.newDescription());
 
-        ch.update(newName, newDescription);
-
-        channelRepository.save(ch);
-        return ch;
+        channelRepository.save(channel);
+        return channelMapper.toDto(channel);
     }
 
     /**
@@ -171,19 +149,14 @@ public class BasicChannelService implements ChannelService {
      * @param channelId 삭제할 대상 채널 ID
      */
     @Override
+    @Transactional
     public void delete(UUID channelId) {
         // 채널 유효성 검사
-        channelRepository.findById(channelId)
+        Channel channel = channelRepository.findById(channelId)
                 .orElseThrow(() -> new NoSuchElementException("존재하지 않는 채널입니다."));
 
-        messageRepository.findByChannelId(channelId).stream()
-                .map(Message::getId)
-                .forEach(messageRepository::deleteById);
-
-        readStatusRepository.findByChannelId(channelId).stream()
-                .map(ReadStatus::getId)
-                .forEach(readStatusRepository::deleteById);
-
+        messageRepository.deleteByChannel_Id(channelId);
+        readStatusRepository.deleteAllByChannel_Id(channelId);
         channelRepository.deleteById(channelId);
     }
 }
